--- a/#sourse/html-parts/_header.html
+++ b/#sourse/html-parts/_header.html
@@ -1,7 +1,7 @@
 	<header class="header">
 
 		<div class="header__bg">
-			<video autoplay loop muted width="100%" height="100%" poster="assets/img/header/bgvideo-poster.jpg" class="bgvideo" id="bgvideo">
+			<video autoplay loop muted width="100%" height="100%" poster="assets/img/header/rks1.jpg" class="bgvideo" id="bgvideo">
 				<source src="assets/videos/video-earth.mp4" type="video/mp4">
 			</video>
 		</div>
@@ -11,7 +11,7 @@
 			<div class="header__body">
 				<div class="header__logo">
 					<a href="https://vladko25.github.io/portfolio-projects/ntsomz/index.html">
-						<img src="assets/icons/logo2.gif" alt="">
+						<img src="assets/img/header/rks-and-ntsomz-logo.png" alt="">
 					</a>
 				</div>
 
@@ -64,7 +64,7 @@
 					<div class="top-posts__item top-post">
 						<a href="#" class="top-post__link"></a>
 						<div class="top-post__img">
-							<img src="assets/img/area-001.jpg" alt="">
+							<img src="assets/img/main-news/conference.jpg" alt="">
 						</div>
 						<div class="top-post__content">
 							<div class="top-post__title">Восемнадцатая Всероссийская открытая конференция «Современные проблемы дистанционного зондирования Земли из космоса» в НЦ ОМЗ АО «Российские космические системы»</div>
@@ -76,7 +76,7 @@
 					<div class="top-posts__item top-post">
 						<a href="#" class="top-post__link"></a>
 						<div class="top-post__img">
-							<img src="assets/img/area-001.jpg" alt="">
+							<img src="assets/img/main-news/calender.jpg" alt="">
 						</div>
 						<div class="top-post__content">
 							<div class="top-post__title">
@@ -93,7 +93,7 @@
 					<div class="top-posts__item top-post">
 						<a href="#" class="top-post__link"></a>
 						<div class="top-post__img">
-							<img src="assets/img/area-001.jpg" alt="">
+							<img src="assets/img/main-operational-work/4.gif" alt="">
 						</div>
 						<div class="top-post__content">
 							<div class="top-post__title">Отснятая территория</div>
@@ -107,7 +107,7 @@
 					<div class="top-posts__item top-post">
 						<a href="gallery.html" class="top-post__link"></a>
 						<div class="top-post__img">
-							<img src="assets/img/area-001.jpg" alt="">
+							<img src="assets/img/1512_6.jpg" alt="">
 						</div>
 						<div class="top-post__content">
 							<div class="top-post__title">Снимки с космических аппаратов</div>
@@ -119,7 +119,7 @@
 					<div class="top-posts__item top-post">
 						<a href="gallery.html" class="top-post__link"></a>
 						<div class="top-post__img">
-							<img src="assets/img/area-001.jpg" alt="">
+							<img src="assets/img/main-operational-work/3.gif" alt="">
 						</div>
 						<div class="top-post__content">
 							<div class="top-post__title">Оперативная деятельность</div>
@@ -131,7 +131,7 @@
 					<div class="top-posts__item top-post">
 						<a href="#" class="top-post__link"></a>
 						<div class="top-post__img">
-							<img src="assets/img/area-001.jpg" alt="">
+							<img src="assets/img/pages/ant1.jpg" alt="">
 						</div>
 						<div class="top-post__content">
 							<div class="top-post__title">Станции приёма космической информации</div>
@@ -143,7 +143,7 @@
 					<div class="top-posts__item top-post">
 						<a href="#" class="top-post__link"></a>
 						<div class="top-post__img">
-							<img src="assets/img/area-001.jpg" alt="">
+							<img src="assets/img/nasa-yZygONrUBe8-unsplash.jpg" alt="">
 						</div>
 						<div class="top-post__content">
 							<div class="top-post__title">Заголовок новости</div>
@@ -154,5 +154,6 @@
 				</div>
 			</div>
 		</div>
-</header>
+	</header>
+
 
