--- a/#sourse/html-parts/_js.html
+++ b/#sourse/html-parts/_js.html
@@ -1,6 +1,6 @@
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-	<script src="assets/js/particles.min.js"></script>
-	<script src="assets/js/fslightbox.js"></script>
-	<!-- <script src="assets/js/breadcrumb.min.js"></script> -->
-	<script src="assets/js/main.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" defer></script>
+	<script src="assets/js/particles.min.js" defer></script>
+	<script src="assets/js/fslightbox.js" defer></script>
+	<script src="assets/js/breadcrumb.min.js" defer></script>
+	<script src="assets/js/main.js" defer></script>
 
