--- a/#sourse/html-parts/_header.html
+++ b/#sourse/html-parts/_header.html
@@ -64,7 +64,7 @@
 					<div class="top-posts__item top-post">
 						<a href="#" class="top-post__link"></a>
 						<div class="top-post__img">
-							<img src="assets/img/main-news/conference.jpg" alt="">
+							<img src="assets/img/jpg/conference.jpg" alt="">
 						</div>
 						<div class="top-post__content">
 							<div class="top-post__title">Восемнадцатая Всероссийская открытая конференция «Современные проблемы дистанционного зондирования Земли из космоса» в НЦ ОМЗ АО «Российские космические системы»</div>
@@ -76,7 +76,7 @@
 					<div class="top-posts__item top-post">
 						<a href="#" class="top-post__link"></a>
 						<div class="top-post__img">
-							<img src="assets/img/main-news/calender.jpg" alt="">
+							<img src="assets/img/jpg/calender.jpg" alt="">
 						</div>
 						<div class="top-post__content">
 							<div class="top-post__title">
@@ -93,7 +93,7 @@
 					<div class="top-posts__item top-post">
 						<a href="#" class="top-post__link"></a>
 						<div class="top-post__img">
-							<img src="assets/img/main-operational-work/4.gif" alt="">
+							<img src="assets/img/jpg/world-map.jpg" alt="">
 						</div>
 						<div class="top-post__content">
 							<div class="top-post__title">Отснятая территория</div>
@@ -107,7 +107,7 @@
 					<div class="top-posts__item top-post">
 						<a href="gallery.html" class="top-post__link"></a>
 						<div class="top-post__img">
-							<img src="assets/img/1512_6.jpg" alt="">
+							<img src="assets/img/jpg/satellite-images.jpg" alt="">
 						</div>
 						<div class="top-post__content">
 							<div class="top-post__title">Снимки с космических аппаратов</div>
@@ -119,7 +119,7 @@
 					<div class="top-posts__item top-post">
 						<a href="gallery.html" class="top-post__link"></a>
 						<div class="top-post__img">
-							<img src="assets/img/main-operational-work/3.gif" alt="">
+							<img src="assets/img/jpg/operational-work.jpg" alt="">
 						</div>
 						<div class="top-post__content">
 							<div class="top-post__title">Оперативная деятельность</div>
@@ -131,7 +131,7 @@
 					<div class="top-posts__item top-post">
 						<a href="#" class="top-post__link"></a>
 						<div class="top-post__img">
-							<img src="assets/img/pages/ant1.jpg" alt="">
+							<img src="assets/img/jpg/reception-stations.jpg" alt="">
 						</div>
 						<div class="top-post__content">
 							<div class="top-post__title">Станции приёма космической информации</div>
@@ -143,7 +143,7 @@
 					<div class="top-posts__item top-post">
 						<a href="#" class="top-post__link"></a>
 						<div class="top-post__img">
-							<img src="assets/img/nasa-yZygONrUBe8-unsplash.jpg" alt="">
+							<img src="assets/img/jpg/default.jpg" alt="">
 						</div>
 						<div class="top-post__content">
 							<div class="top-post__title">Заголовок новости</div>
