--- a/#sourse/html-parts/_header.html
+++ b/#sourse/html-parts/_header.html
@@ -1,48 +1,39 @@
 	<header class="header">
 
-		<div class="header__bg">
-			<video autoplay loop muted width="100%" height="100%" poster="assets/img/jpg/bg-hero.jpg" class="bgvideo" id="bgvideo">
-				<source src="assets/videos/video-earth.mp4" type="video/mp4">
-			</video>
-		</div>
+		<div class="header__top top-header">
 
-		<div class="header__top">
-
-			<div class="header__body">
-				<div class="header__logo">
-					<a href="https://vladko25.github.io/portfolio-projects/ntsomz/index.html">
+			<div class="top-header__body">
+				<div class="top-header__logo">
+					<a href=".">
 						<img src="assets/img/header/rks-ntsomz-logo.png" alt="">
 					</a>
 				</div>
 
-				<div class="header__maintitle-wrapper">
-					<h1 class="header__maintitle">
-						Научный центр оперативного мониторинга Земли
-					</h1>
-					<h6 class="header__title">
+				<div class="top-header__maintitle-wrapper">
+					<h6 class="top-header__title">
 						Научный центр оперативного мониторинга Земли
 					</h6>
-					<p class="header__desc">
+					<p class="top-header__desc">
 						Оператор космических систем дистанционного зондирования Земли
 					</p>
 				</div>
 
-				<div class="header__navigation">
-					<nav class="header__menu">
-						<ul class="header__list">
-							<li class="header__link"><a href="/portfolio-projects/ntsomz/about.html">О центре</a></li>
-							<li class="header__link"><a href="#">Информационные продукты</a></li>
-							<li class="header__link"><a href="#">Космические средства ДЗЗ</a></li>
-							<li class="header__link"><a href="#">Проекты</a></li>
-							<li class="header__link"><a href="#">Заказ данных</a></li>
-							<li class="header__link"><a href="/portfolio-projects/ntsomz/gallery.html">Галерея изображений</a></li>
-							<li class="header__link"><a href="#">Новости</a></li>
-							<li class="header__link"><a href="#">Информация о ДЗЗ</a></li>
+				<div class="top-header__navigation">
+					<nav class="top-header__menu">
+						<ul class="top-header__list">
+							<li class="top-header__link"><a href="/portfolio-projects/ntsomz/about.html">О центре</a></li>
+							<li class="top-header__link"><a href="#">Информационные продукты</a></li>
+							<li class="top-header__link"><a href="#">Космические средства ДЗЗ</a></li>
+							<li class="top-header__link"><a href="#">Проекты</a></li>
+							<li class="top-header__link"><a href="#">Заказ данных</a></li>
+							<li class="top-header__link"><a href="/portfolio-projects/ntsomz/gallery.html">Галерея изображений</a></li>
+							<li class="top-header__link"><a href="#">Новости</a></li>
+							<li class="top-header__link"><a href="#">Информация о ДЗЗ</a></li>
 						</ul>
 					</nav>
 
-					<div class="header__burger-wrapper">
-						<div class="header__burger">
+					<div class="top-header__burger-wrapper">
+						<div class="top-header__burger">
 							<span></span>
 						</div>
 					</div>
@@ -53,107 +44,33 @@
 
 		<div class="title-page__wrapper">
 			<h1 class="title-page">
-				Научный центр оперативного мониторинга Земли
+				<!-- Научный центр оперативного мониторинга Земли -->
 			</h1>
 		</div>
-
-		<div class="main-content">
-			<div class="top-posts">
-				<div class="main-content__section main-content__section_one">
-					<h2 class="main-content__title">Важные новости</h2>
-					<div class="top-posts__item top-post">
-						<a href="#" class="top-post__link"></a>
-						<div class="top-post__img">
-							<img src="assets/img/jpg/conference.jpg" alt="">
-						</div>
-						<div class="top-post__content">
-							<div class="top-post__title">Восемнадцатая Всероссийская открытая конференция «Современные проблемы дистанционного зондирования Земли из космоса» в НЦ ОМЗ АО «Российские космические системы»</div>
-							<div class="top-post__desc">20 ноября 2020 года в НЦ ОМЗ АО «Российские космические системы» запланировано проведение в онлайн режиме заседания «Российская система спутниковых наблюдений и технологий: состояние и перспективы развития» в рамках 18-й Всероссийской открытой конференции «Современные проблемы дистанционного зондирования Земли из космоса» (организатор конференции – Институт космических исследований РАН).</div>
-							<div class="top-post__date">13 ноября 2020 года</div>
-						</div>
-					</div>
-
-					<div class="top-posts__item top-post">
-						<a href="#" class="top-post__link"></a>
-						<div class="top-post__img">
-							<img src="assets/img/jpg/calender.jpg" alt="">
-						</div>
-						<div class="top-post__content">
-							<div class="top-post__title">
-								Календарь конференций
-							</div>
-							<div class="top-post__desc">
-								Выставки, научно-технические совещания, конференции, международные конгрессы и семинары
-							</div>
-							<div class="top-post__date">
-							</div>
-						</div>
-					</div>
-
-					<div class="top-posts__item top-post">
-						<a href="#" class="top-post__link"></a>
-						<div class="top-post__img">
-							<img src="assets/img/jpg/world-map.jpg" alt="">
-						</div>
-						<div class="top-post__content">
-							<div class="top-post__title">Отснятая территория</div>
-							<div class="top-post__desc">Площадь, отснятая за</div>
-							<div class="top-post__date">07.12.2020</div>
-						</div>
-					</div>
-				</div>
-				<div class="main-content__section main-content__section_two">
-					<h2 class="main-content__title">Фотогалерея</h2>
-					<div class="top-posts__item top-post">
-						<a href="gallery.html" class="top-post__link"></a>
-						<div class="top-post__img">
-							<img src="assets/img/jpg/satellite-images.jpg" alt="">
-						</div>
-						<div class="top-post__content">
-							<div class="top-post__title">Снимки с космических аппаратов</div>
-							<div class="top-post__desc"></div>
-							<div class="top-post__date">Дата публикации</div>
-						</div>
-					</div>
-
-					<div class="top-posts__item top-post">
-						<a href="gallery.html" class="top-post__link"></a>
-						<div class="top-post__img">
-							<img src="assets/img/jpg/operational-work.jpg" alt="">
-						</div>
-						<div class="top-post__content">
-							<div class="top-post__title">Оперативная деятельность</div>
-							<div class="top-post__desc"></div>
-							<div class="top-post__date">Дата публикации</div>
-						</div>
-					</div>
-
-					<div class="top-posts__item top-post">
-						<a href="#" class="top-post__link"></a>
-						<div class="top-post__img">
-							<img src="assets/img/jpg/reception-stations.jpg" alt="">
-						</div>
-						<div class="top-post__content">
-							<div class="top-post__title">Станции приёма космической информации</div>
-							<div class="top-post__desc"></div>
-							<div class="top-post__date"></div>
-						</div>
-					</div>
-
-					<div class="top-posts__item top-post">
-						<a href="#" class="top-post__link"></a>
-						<div class="top-post__img">
-							<img src="assets/img/jpg/default.jpg" alt="">
-						</div>
-						<div class="top-post__content">
-							<div class="top-post__title">Заголовок новости</div>
-							<div class="top-post__desc">Описание новости</div>
-							<div class="top-post__date">Дата публикации</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+		
+		<!-- <div class="breadcrumb__wrapper">
+				<script>
+					/*-----------------------*/
+					/*-------breadcrumb-------*/
+					/*-----------------------*/
+					try {
+						function create_breadcrumb() {
+							breadcrumb.main = [
+								{
+									"text": 'Главная',
+									"link": '/',
+									'class': 'breadcrumb-home'
+								}
+							],
+							breadcrumb.element = 'ul',
+							breadcrumb.build();
+						}
+					} catch (err) {
+						console.log(err.name);
+						console.log(err.messege);
+					}
+				</script>
+			</div> -->
 	</header>
 
 
